test with import csv, parallel download

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -330,13 +330,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting bot 2...\n",
+      "Query: spotted rose snapper Warming\n",
+      "starting bot 2...\n",
+      "Query: maize Warming\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "papers Characterizing Potential Responses to Warming of Mexican Marine Resources in Tropical Atlantic and Pacific Regions Based on Their Thermal Niche\n",
+      "Papers found on Crossref: 4/5\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> Characterizing Potential Responses to Warming of Mexican Marine Resources in Tropical Atlantic and Pacific Regions Based on Their Thermal Niche\n",
+      "papers Global warming presents new challenges for maize pest management\n",
+      "Papers found on Crossref: 5/5\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> Global warming presents new challenges for maize pest management\n",
+      "Download 2 of 5 -> Future warming increases probability of globally synchronized maize production shocks\n",
+      "Download 3 of 5 -> Global warming and increasing maize cultivation demand comprehensive efforts in disease and insect resistance breeding in north‐western Europe\n",
+      "Download 4 of 5 -> The benefits of recent warming for maize production in high latitude China\n",
+      "Download 2 of 5 -> Parasite communities of the spotted rose snapper Lutjanus guttatus (Perciformes: Lutjanidae) off the Mexican Pacific coasts: Spatial and long-term inter-annual …\n",
+      "Download 5 of 5 -> High-yield maize with large net energy yield and small global warming intensity\n",
+      "downloaded 6 of 5 papers\n",
+      "Done\n",
+      "Download 3 of 5 -> The Ecological and Anthropogenic Impacts of fishing gear in a tropical system: How the size of Spotted Rose Snapper (Lutjanus guttatus) and the ratio of target catch …\n",
+      "Download 4 of 5 -> Regional Correspondence in Habitat Occupancy by Gray Snapper (Lutjanus griseus) in Estuaries of the Southeastern United States\n",
+      "Download 5 of 5 -> Climate‐related, decadal‐scale assemblage changes of seagrass‐associated fishes in the northern Gulf of Mexico\n",
+      "downloaded 9 of 5 papers\n",
+      "Done\n",
+      "Done\n",
+      "starting bot 2...\n",
+      "starting bot 2...Query: Lutjanus guttatus Warming\n",
+      "Query: Zea mays Warming\n",
+      "\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "papers Effects of artificial warming on the structural, physiological, and biochemical changes of maize (Zea mays L.) leaves in northern China\n",
+      "Papers found on Crossref: 5/5\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> Effects of artificial warming on the structural, physiological, and biochemical changes of maize (Zea mays L.) leaves in northern China\n",
+      "papers … acclimation temperature on thermoregulatory behaviour, thermal tolerance and respiratory metabolism of Lutjanus guttatus and the response of heat shock protein 70 …\n",
+      "Papers found on Crossref: 4/5\n",
+      "\n",
+      "Download 2 of 5 -> Warming and elevated CO2 alter the transcriptomic response of maize (Zea mays L.) at the silking stage\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> … acclimation temperature on thermoregulatory behaviour, thermal tolerance and respiratory metabolism of Lutjanus guttatus and the response of heat shock protein 70 …\n",
+      "Download 3 of 5 -> Temperature Responses of Photosynthesis and Respiration of Maize (Zea mays) Plants to Experimental Warming\n",
+      "Download 2 of 5 -> A new efficient method for the mass production of juvenile spotted rose snapper Lutjanus guttatus\n",
+      "Download 4 of 5 -> Experimental warming enhances the carbon gain but does not affect the yield of maize (Zea mays L.) in the North China Plain\n",
+      "Download 3 of 5 -> Parasite communities of the spotted rose snapper Lutjanus guttatus (Perciformes: Lutjanidae) off the Mexican Pacific coasts: Spatial and long-term inter-annual …\n",
+      "Download 5 of 5 -> Effective hybrids of Zea mays L. under conditions of changes in the boundaries of agro-climatic zones under the influence of global warming\n",
+      "Download 4 of 5 -> … effect of substituting fish meal with soybean meal on growth, feed efficiency, body composition and blood chemistry in juvenile spotted rose snapper Lutjanus guttatus …\n",
+      "downloaded 16 of 5 papers\n",
+      "Done\n",
+      "Download 5 of 5 -> Expression and activity of trypsin and pepsin during larval development of the spotted rose snapper Lutjanus guttatus\n",
+      "downloaded 18 of 5 papers\n",
+      "Done\n",
+      "Done\n",
+      "starting bot 2...\n",
+      "Query: popcorn Warmingstarting bot 2...\n",
+      "\n",
+      "Query: corn Warming\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "\n",
+      "Google Scholar page 1 : 5 papers found\n",
+      "Searching paper 1 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 2 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 3 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 4 of 5 on Crossref...\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "papers Response of corn to climate warming in arid areas in Northwest China\n",
+      "Papers found on Crossref: 4/5\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> Response of corn to climate warming in arid areas in Northwest China\n",
+      "Searching paper 5 of 5 on Crossref...\n",
+      "Download 2 of 5 -> Long‐term no‐till and stover retention each decrease the global warming potential of irrigated continuous corn\n",
+      "Download 3 of 5 -> New biological model to manage the impact of climate warming on maize corn borers\n",
+      "papers The physics of popping popcorn\n",
+      "Papers found on Crossref: 5/5\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 5 -> The physics of popping popcorn\n",
+      "Download 4 of 5 -> Do mitigation strategies reduce global warming potential in the northern US corn belt?\n",
+      "Download 2 of 5 -> Ruining popcorn? The welfare effects of information\n",
+      "Download 5 of 5 -> Spatially and temporally explicit life cycle global warming, eutrophication, and acidification impacts from corn production in the US Midwest\n",
+      "Download 3 of 5 -> Popcorn: critical temperature, jump and sound\n",
+      "downloaded 24 of 5 papers\n",
+      "Done\n",
+      "Download 4 of 5 -> Chilled versus ambient aeration and fumigation of stored popcorn Part 1: Temperature management\n",
+      "Download 5 of 5 -> Mulberry popcorn disease occurrence in Korea region and development of integrative control method.\n",
+      "downloaded 27 of 5 papers\n",
+      "Done\n",
+      "Done\n",
+      "263.6143379211426\n"
+     ]
+    }
+   ],
    "source": [
-    "folder_name = f'pdfs'\n",
-    "dwn_dir = os.path.join(os.getcwd(), folder_name)\n",
-    "dwn_dir\n"
+    "### TEST CSV IMPORT, PARALLELIZED FOOD & HAZARD, REPEATED DOWNLOADS\n",
+    "\n",
+    "#test list split to different columns and run all functions\n",
+    "from PyPaperBot2 import __main__ as p\n",
+    "import os\n",
+    "import glob\n",
+    "import download_read\n",
+    "from multiprocessing import Process\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "foodlist = download_read.import_foodlist(\"testlist.csv\")\n",
+    "hazards = ['Warming']#,'Atmospheric CO2 Increase','Ocean Acidification','Drought'] #,'Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "scholar_pages = [1]\n",
+    "scholar_results = 5\n",
+    "\n",
+    "for l in foodlist:\n",
+    "   foods = foodlist[l]\n",
+    "   if __name__ == '__main__':\n",
+    "        # create all tasks\n",
+    "        processes = [Process(target=download_read.download_papers, args=(food,hazard, scholar_pages, scholar_results, True)) for food in foods for hazard in hazards]\n",
+    "        # start all processes\n",
+    "        for process in processes:\n",
+    "            process.start()\n",
+    "        # wait for all processes to complete\n",
+    "        for process in processes:\n",
+    "            process.join()\n",
+    "        # report that all tasks are completed\n",
+    "        print('Done', flush=True)\n",
+    "\n",
+    "end_time = time.time() #stop timer\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(elapsed_time)"
    ]
   },
   {
