framework to load species.csv and download

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\abm20\\Anaconda3\\envs\\py37\\lib\\site-packages\\requests\\__init__.py:102: RequestsDependencyWarning: urllib3 (1.26.15) or chardet (5.2.0)/charset_normalizer (2.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({})/charset_normalizer ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
@@ -353,6 +362,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing Atmospheric CO2 Increase\n",
+      "Done\n",
+      "4.1603944301605225\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PyPaperBot2 import __main__ as p\n",
+    "\n",
+    "import download_read\n",
+    "from multiprocessing import Process\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "foodlist = download_read.import_foodlist_species(\"species.csv\")\n",
+    "#foodlist = download_read.import_foodlist(\"testlist.csv\")\n",
+    "\n",
+    "#hazards = ['Drought']#,'Atmospheric CO2 Increase','Ocean Acidification','Drought'] #,'Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "hazards = ['Warming','Atmospheric CO2 Increase','Ocean Acidification','Drought','Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "scholar_pages = [1,2]\n",
+    "scholar_results = 20\n",
+    "\n",
+    "for l in foodlist:\n",
+    "    for hazard in hazards[1:2]:\n",
+    "        print('processing', hazard)\n",
+    "        foods = foodlist[l][0:10]\n",
+    "        if __name__ == '__main__':\n",
+    "            # create all tasks\n",
+    "            processes = [Process(target=download_read.download_papers, args=(food, hazard, l, scholar_pages, scholar_results, True)) for food in foods]\n",
+    "            # start all processes\n",
+    "            for process in processes:\n",
+    "                process.start()\n",
+    "            # wait for all processes to complete\n",
+    "            for process in processes:\n",
+    "                process.join()\n",
+    "            # report that all tasks are completed\n",
+    "            print('Done', flush=True)\n",
+    "\n",
+    "end_time = time.time() #stop timer\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(elapsed_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -403,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
