added url to results csv

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -454,6 +454,55 @@
     "\n",
     "dfall"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208.26924896240234\n"
+     ]
+    }
+   ],
+   "source": [
+    "### TEST CSV IMPORT, PARALLELIZED FOOD & HAZARD, REPEATED DOWNLOADS\n",
+    "\n",
+    "#test list split to different columns and run all functions\n",
+    "from PyPaperBot2 import __main__ as p\n",
+    "import os\n",
+    "import glob\n",
+    "import download_read as dr\n",
+    "#from multiprocessing import Process\n",
+    "from multiprocessing import Pool\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "foodlist = dr.import_foodlist(\"SpeciesV1.csv\")\n",
+    "hazards = ['Warming']#,'Atmospheric CO2 Increase','Ocean Acidification','Drought','Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "scholar_pages = [1]\n",
+    "scholar_results = 2 #20\n",
+    "\n",
+    "# #for l in foodlist:\n",
+    "foods = foodlist['species']\n",
+    "foods = foods[:3] #test with smaller chunk of list\n",
+    "\n",
+    "# Set the maximum number of processes you want to use\n",
+    "max_processes = 4  # Adjust this number as per your needs\n",
+    "\n",
+    "# Create a pool of worker processes\n",
+    "with Pool(max_processes) as pool:\n",
+    "    args = [(food, hazard,'species') for food in foods for hazard in hazards]\n",
+    "    pool.starmap(dr.download_papers, args)\n",
+    "\n",
+    "end_time = time.time() #stop timer\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(elapsed_time)"
+   ]
   }
  ],
  "metadata": {
@@ -472,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
